--- a/KataPotter/KataPotter/KataPotter.csproj
+++ b/KataPotter/KataPotter/KataPotter.csproj
@@ -48,8 +48,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithmus.cs" />
+    <Compile Include="Finde_Tuple_Ergebnis.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
